
// tag::3.2.0-SNAPSHOT[]
== 3.2.0-SNAPSHOT

=== Added

=== Changed

=== Removed

=== Fixed

* [gateway]: Use UTC for Time Restricted-Access-Policy. The Gateway used the configured local (server) time instead of UTC while applying the rules. This could have lead to a mismatch between configuration (UTC) and execution.
By https://github.com/volkflo[Florian Volk (@volkflo)^].

// end::3.2.0-SNAPSHOT[]

// tag::3.1.2.Final[]
== 3.1.2.Final

=== Added

* [gateway-vertx]: you can add a list of additional `allowed-issuers` in your Gateway API Keycloak Authentication config.
This better supports situations where your Keycloak server returns multiple different issuers, for example for internal vs external domains, Docker, K8s, etc. By https://github.com/msavy[Marc Savy (@msavy)^].

=== Changed

* A large number of dependencies have been updated across the Apiman codebase in order to improve security. By https://github.com/msavy[Marc Savy (@msavy)^].

* [containers/docker-compose]: to support a change in Keycloak's behaviour, we now set `allowed-issuers` in the Vert.x
Gateway API authentication configuration to allow both internal and external issuers. By https://github.com/msavy[Marc Savy (@msavy)^].

=== Removed

=== Fixed

* [gateway-vertx]: allow access to Vert.x Gateway API's `/system/status` endpoint without auth. This allows health checks without needing to pass around auth credentials and/or relying on 4xx errors. By https://github.com/msavy[Marc Savy (@msavy)^].

* [gateway-vertx]: array values are now always correctly substituted in Vert.x Gateway configuration. By https://github.com/msavy[Marc Savy (@msavy)^].

* [portal]: show REST API documentation even when user not logged in.
By https://github.com/bastiangem[Bastian Gembalczyk (@BastianGem)^] and https://github.com/volkflo[Florian Volk (@volkflo)^].

* [gateway-vertx]: do not include `null`/empty path elements in Keycloak discovery URI.