@@ -16,6 +16,10 @@ All notable changes to Apiman will be documented here (as of Apiman 3).
 * [gateway]: Use UTC for Time Restricted-Access-Policy. The Gateway used the configured local (server) time instead of UTC while applying the rules. This could have lead to a mismatch between configuration (UTC) and execution.
 By https://github.com/volkflo[Florian Volk (@volkflo)^].
 
+* [manager-ui]: Fix CSS issue with metrics popover legend being white/invisible. By https://github.com/msavy[Marc Savy (@msavy)^].
+
+* [common-config]: Fix an edge case in EnvLookup where `List.of` might be used with a `null` element which results in a NPE and metrics not rendering with certain configurations. By https://github.com/msavy[Marc Savy (@msavy)^].
+
 // end::3.2.0-SNAPSHOT[]
 
 // tag::3.1.2.Final[]
@@ -28,7 +32,7 @@ This better supports situations where your Keycloak server returns multiple diff
 
 === Changed
 
-* A large number of dependencies have been updated across the Apiman codebase in order to improve security. By https://github.com/msavy[Marc Savy (@msavy)^].
+* A large number of dependencies have been updated across the Apiman codebase to improve security. By https://github.com/msavy[Marc Savy (@msavy)^].
 
 * [containers/docker-compose]: to support a change in Keycloak's behaviour, we now set `allowed-issuers` in the Vert.x
 Gateway API authentication configuration to allow both internal and external issuers. By https://github.com/msavy[Marc Savy (@msavy)^].
@@ -71,7 +75,7 @@ If you are using MSSQL, you should set the Java system property `hibernate.auto_
 
 === Changed
 
-* A variety of dependencies have been updated across the Apiman codebase in order to keep users secure. If you don't want to upgrade, speak to your long-term support provider.
+* A variety of dependencies have been updated across the Apiman codebase to keep users secure. If you don't want to upgrade, speak to your long-term support provider.
 
 * [manager-api-rest]: Apiman Manager API now has an OpenAPI v3 schema! You can access this at `/openapi.json` or `/openapi.yml`. For example, http://localhost:8080/apiman/openapi.json. By https://github.com/msavy[Marc Savy (@msavy)^].
 
